[package]
name = "acme-tiny-rs"
version = "0.1.7"
edition = "2021"
description = "A tiny ACME client in Rust to issue and renew TLS certs from Let's Encrypt"
authors = ["acme-tiny-rs contributors"]
license = "MIT"
repository = "https://github.com/dyrnq/acme-tiny-rs"
readme = "README.md"
keywords = ["acme", "letsencrypt", "tls", "certificate", "ssl"]
categories = ["command-line-utilities", "web-programming", "network-programming"]

[[bin]]
name = "acme-tiny-rs"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# HTTP client with rustls (no OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }

# RSA key parsing and signing (native Rust, no OpenSSL)
rsa = { version = "0.9", features = ["pem", "sha2"] }
pkcs8 = { version = "0.10", features = ["pem"] }
pkcs1 = "0.7"

# ECDSA key support (P-256, P-384)
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
p384 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
signature = "2"

# SHA-256/384 hashing
sha2 = "0.10"
sha1 = "0.10"
digest = "0.10"
hmac = "0.12"

# Base64 encoding (URL-safe, no padding)
base64 = "0.22"

# X.509 CSR parsing
x509-parser = "0.17"

# DER encoding for CSR
der = "0.7"

# Serde for JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# TLS server (tls-alpn-01 standalone)
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26"
rcgen = { version = "0.14", default-features = false, features = ["pem", "ring"] }# TLS certificate check (check-tls subcommand)
webpki-roots = "1"


[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary
